crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_closure_is_called_through_the_variable_holding_it.snap
---
source: crates/nvs-ir/src/lower/tests.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:55
    v1 = new T$fn0() ! bb1  ; object
    v2 = const.int 2  ; int
    field.set v1, T$fn0::fn#arity, v2
    v3 = const.int 34  ; int
    field.set v1, T$fn0::fn#params, v3
    ; stmt s1 @5:5-5:29
    v4 = const.int 6  ; int
    v5 = const.int 7  ; int
    v6 = helper.call_closure v1, v4, v5 ! bb2  ; tagged
    v7 = helper.tagged_to_string v6 ! bb3  ; string
    release v6
    helper.echo_str v7 ! bb4
    release v7
    release v1
    release v0
    return
  bb1:
    release v0
    propagate "m() at t.nvs:4"
  bb2:
    release v1
    release v0
    propagate "m() at t.nvs:5"
  bb3:
    release v1
    release v0
    propagate "m() at t.nvs:5"
  bb4:
    release v7
    release v1
    release v0
    propagate "m() at t.nvs:5"
}
