crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_core_member_call_lowers_to_a_symbol_and_borrows_its_argument.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, array) -> uint {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; array
    ; stmt s0 @4:5-4:32
    v2 = core.call nvs_core_arr_count(v1) ! bb1  ; uint
    release v1
    release v0
    return v2
  bb1:
    release v1
    release v0
    propagate "m() at t.nvs:4"
}
