crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_finally_is_lowered_once_per_exit_out_of_the_protected_region.snap
---
source: crates/nvs-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-8:6
    ; stmt s1 @5:7-5:25
    v1 = class.desc T  ; classdesc
    v2 = call T::inner(this: v1) ! bb3  ; int
    ; stmt s2 @7:7-7:19
    v3 = const.str "done"  ; string
    helper.echo_str v3 ! bb4
    release v3
    release v0
    return v2
  bb1:
    v4 = take.thrown  ; object
    ; stmt s3 @7:7-7:19
    v5 = const.str "done"  ; string
    helper.echo_str v5 ! bb5
    release v5
    throw v4 -> bb6
  bb2:
    release v0
    return
  bb3:
    catch -> bb1
  bb4:
    release v3
    release v0
    propagate "m() at t.nvs:7"
  bb5:
    release v5
    release v0
    propagate "m() at t.nvs:7"
  bb6:
    release v0
    propagate "m() at t.nvs:7"
}
