crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_flush_left_heredoc_cooks_like_a_double_quoted_literal.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-6:5
    v1 = const.str "line1\nline2"  ; string
    release v1
    release v0
    return
}
