crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_foreach_over_a_cursor_drives_advance_then_current_virtually.snap
---
source: crates/nvs-ir/src/lower/tests.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; object
    ; stmt s0 @4:5-6:6
    retain v1
    jump bb1
  bb1:
    retain v1
    v2 = class.of v1  ; classdesc
    v3 = call.virtual v2::advance else <abstract>(this: v1) ! bb2  ; bool
    branch v3 -> bb3 (e0), bb4 (e1)
  bb2:
    release v1
    release v1
    release v0
    propagate "m() at t.nvs:4"
  bb3:
    retain v1
    v4 = class.of v1  ; classdesc
    v5 = call.virtual v4::current else <abstract>(this: v1) ! bb5  ; int
    ; stmt s1 @4:28-6:6
    ; stmt s2 @5:7-5:15
    v6 = helper.int_to_string v5 ! bb6  ; string
    helper.echo_str v6 ! bb7
    release v6
    safepoint
    jump bb1
  bb4:
    release v1
    release v1
    release v0
    return
  bb5:
    release v1
    release v1
    release v0
    propagate "m() at t.nvs:4"
  bb6:
    release v1
    release v1
    release v0
    propagate "m() at t.nvs:5"
  bb7:
    release v6
    release v1
    release v1
    release v0
    propagate "m() at t.nvs:5"
}
